Minor adjustment to creator audio element CSS, modified invocation of Materia.CreatorCore.getMediaUrl to omit file extension, as it was generating nonfunctional media URLs.

--- a/src/creator.scss
+++ b/src/creator.scss
@@ -387,9 +387,7 @@ body {
 				display        : inline-block;
 
 				.play-btn:before {
-					position: absolute;
-					left: 9px;
-
+					margin-left: 4px;
 				}
 			}
 			.audio-image {
